app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 227, 47%, 96%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --toggle: hsl(230, 22%, 74%);

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
    --clr-DarkToggle:                                                                    
  ;
  }

  .dark {
    --background: 230, 17%, 14%;
    --foreground: 210 40% 98%;

    --card: 228, 28%, 20%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --toggle: hsl(218, 43%, 73%);
    /* --toggle: linear-gradient(#e66465, #9198e5); */
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-sm text-foreground;
  }
}

@layer utilities {
  .clr-instagram {
    background-color: linear-gradient(
      to right,
      hsl(37, 97%, 70%),
      hsl(329, 70%, 58%)
    );
  }
}

.clr-facebook {
  border-top-color: hsl(208, 92%, 53%);
}
.clr-twitter {
  border-top-color: hsl(203, 89%, 53%);
}

.clr-instagram {
  border-top-color: linear-gradient(
    to right,
    hsl(37, 97%, 70%),
    hsl(329, 70%, 58%)
  );
}

.clr-youtube {
  border-top-color: hsl(348, 97%, 39%);
}

.clr-negative {
  color: hsl(356, 69%, 56%);
}

.clr-positive {
  color: hsl(163, 72%, 41%);
}

.gridAuto {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

